Fix critical bugs, add production config, and update infrastructure
- Fix @PathVariable resolution for Spring Boot 3.x (all CRUD controllers)
- Add maven-compiler-plugin with -parameters flag
- Fix CORS config, Dashboard DTO/Service, and global exception handler
- Add DataInitializer for demo users and seed data
- Add SpotBugs exclude filter
- Add application-prod.properties for AWS deployment
- Add Elastic IP to Terraform EC2 for static public IP
- Update Terraform outputs to use Elastic IP

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>